[gd_scene load_steps=4 format=3 uid="uid://cw8qcowo1i1qp"]

[ext_resource type="Script" path="res://Scripts/State Machines/StateMachine.gd" id="1_7x7h2"]
[ext_resource type="Script" path="res://Scripts/States/EnemyIdle.gd" id="2_h52bd"]
[ext_resource type="Script" path="res://Scripts/States/EnemyFollow.gd" id="3_u7y57"]

[node name="StateMachine" type="Node" node_paths=PackedStringArray("initial_state")]
script = ExtResource("1_7x7h2")
initial_state = NodePath("EnemyFollow")

[node name="EnemyIdle" type="Node" parent="."]
script = ExtResource("2_h52bd")

[node name="WanderTime" type="Timer" parent="EnemyIdle"]

[node name="IdleTime" type="Timer" parent="EnemyIdle"]

[node name="EnemyFollow" type="Node" parent="."]
script = ExtResource("3_u7y57")

[connection signal="Transitioned" from="EnemyIdle" to="." method="_on_enemy_idle_transitioned"]
[connection signal="timeout" from="EnemyIdle/WanderTime" to="EnemyIdle" method="_on_wander_time_timeout"]
[connection signal="timeout" from="EnemyIdle/IdleTime" to="EnemyIdle" method="_on_idle_time_timeout"]
[connection signal="Transitioned" from="EnemyFollow" to="." method="_on_enemy_follow_transitioned"]
